# WFP

./: .gitignore  README.md  app.ipynb  app.py  countryapi.py  main.py  pyproject.toml  requirements.txt  wfpbase.py
assets/: mystyles.css  title.html  wfp_countries_global_1.csv  wfp_countries_global_2.csv
