[tool.poetry]
name = "WFP Food PricesTracker"
version = "0.1.0"
description = "An analytical application that tracks prices of produce across the world"
authors = ["Truse Diffa <diffabitrus55@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4"
plotly = "^5.18.0"
dash = "^2.14.2"
pandas = "^2.2.0"
datatable = "^1.1.0"
requests = "^2.31.0"
geopandas = "^0.14.2"
deta = "^1.2.0"
python-dotenv = "^1.0.0"
hdx-python-api = "^6.2.1"
quantulum3 = {extras = ["classifier"], version = "^0.9.0"}
pyarrow = "^15.0.0"
ipython = "^8.20.0"
hdx-python-utilities = "^3.6.4"
nbformat = "^5.9.2"
dash-daq = "^0.5.0"
dash-bootstrap-components = "^1.5.0"
flask-caching = "^2.1.0"
cachetools = "^5.3.2"
jupyter = "^1.0.0"
dash-mantine-components = "^0.12.1"
celery = "^5.3.6"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"